feat(domain): Add improvement in TransactionHistoryService using JPA Specifications